--- a/pom.xml
+++ b/pom.xml
@@ -486,44 +486,9 @@
     </repository>
 
     <repository>
-      <id>maven2-repository.dev.java.net</id>
-      <name>Java.net Repository for Maven</name>
-      <url>http://download.java.net/maven/2/</url>
-      <releases>
-        <enabled>true</enabled>
-      </releases>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
-    </repository>
-
-    <repository>
-      <id>apache-snapshots</id>
-      <name>Apache Release Repository</name>
-      <url>https://repository.apache.org/content/groups/public/</url>
-      <releases>
-        <enabled>true</enabled>
-      </releases>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-    </repository>
-
-    <repository>
-      <id>apache-incubating</id>
-      <name>Apache Incubating Repository</name>
-      <url>http://people.apache.org/repo/m2-incubating-repository/</url>
-      <releases>
-        <enabled>true</enabled>
-      </releases>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
-    </repository>
-
-    <repository>
-      <id>jboss</id>
-      <url>http://repository.jboss.com/maven2/</url>
+      <id>maven.glassfish.org</id>
+      <name>GlassFish Nexus Server</name>
+      <url>http://maven.glassfish.org/content/groups/glassfish</url>
       <releases>
         <enabled>true</enabled>
       </releases>
@@ -538,19 +503,6 @@
       <url>http://repo.aduna-software.org/maven2/releases/</url>
       <releases>
         <enabled>true</enabled>
-      </releases>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
-    </repository>
-
-    <!-- disabled bad repo: maven-repository.dev.java.net -->
-    <!-- see http://jira.codehaus.org/browse/MEV-649      -->
-    <repository>
-      <id>java.net</id>
-      <url>https://maven-repository.dev.java.net/nonav/repository</url>
-      <releases>
-        <enabled>false</enabled>
       </releases>
       <snapshots>
         <enabled>false</enabled>
