--- a/fcrepo-common/pom.xml
+++ b/fcrepo-common/pom.xml
@@ -42,6 +42,7 @@
 
         <configuration>
           <sourceDirectory>${basedir}/../resources/wsdl</sourceDirectory>
+          <outputDirectory>${project.build.directory}/generated-sources/axistools</outputDirectory>
           <testCases>false</testCases>
           <serverSide>true</serverSide>
           <skeletonDeploy>true</skeletonDeploy>
@@ -163,7 +164,7 @@
             <configuration>
               <mainClass>org.fcrepo.generate.BuildAxisStubWrapper</mainClass>
               <arguments>
-                <argument>${project.build.directory}/generated-sources/axistools/wsdl2java/org/fcrepo/server/management/FedoraAPIMBindingSOAPHTTPStub.java</argument>
+                <argument>${project.build.directory}/generated-sources/axistools/org/fcrepo/server/management/FedoraAPIMBindingSOAPHTTPStub.java</argument>
                 <argument>${project.build.sourceDirectory}/org/fcrepo/common/generate/FedoraStubWrapper.template</argument>
                 <argument>org.fcrepo.client</argument>
                 <argument>APIMStubWrapper</argument>
@@ -181,7 +182,7 @@
             <configuration>
               <mainClass>org.fcrepo.generate.BuildAxisStubWrapper</mainClass>
               <arguments>
-                <argument>${project.build.directory}/generated-sources/axistools/wsdl2java/org/fcrepo/server/access/FedoraAPIABindingSOAPHTTPStub.java</argument>
+                <argument>${project.build.directory}/generated-sources/axistools/org/fcrepo/server/access/FedoraAPIABindingSOAPHTTPStub.java</argument>
                 <argument>${project.build.sourceDirectory}/org/fcrepo/common/generate/FedoraStubWrapper.template</argument>
                 <argument>org.fcrepo.client</argument>
                 <argument>APIAStubWrapper</argument>
@@ -240,20 +241,20 @@
             <configuration>
               <tasks>
                 <replace
-                  file="${project.build.directory}/generated-sources/axistools/wsdl2java/org/fcrepo/server/management/deploy.wsdd"
+                  file="${project.build.directory}/generated-sources/axistools/org/fcrepo/server/management/deploy.wsdd"
                   token="Fedora-API-M-Port-SOAPHTTP" value="management" />
                 <replace
-                  file="${project.build.directory}/generated-sources/axistools/wsdl2java/org/fcrepo/server/management/deploy.wsdd"
+                  file="${project.build.directory}/generated-sources/axistools/org/fcrepo/server/management/deploy.wsdd"
                   token="*&quot;/&gt;"
                   value="*&quot;/&gt;&lt;parameter name=&quot;scope&quot; value=&quot;application&quot;/&gt;" />
                 <replace
-                  file="${project.build.directory}/generated-sources/axistools/wsdl2java/org/fcrepo/server/access/deploy.wsdd"
+                  file="${project.build.directory}/generated-sources/axistools/org/fcrepo/server/access/deploy.wsdd"
                   token="Fedora-API-A-Port-SOAPHTTP" value="access" />
                 <replace
-                  file="${project.build.directory}/generated-sources/axistools/wsdl2java/org/fcrepo/server/management/undeploy.wsdd"
+                  file="${project.build.directory}/generated-sources/axistools/org/fcrepo/server/management/undeploy.wsdd"
                   token="Fedora-API-M-Port-SOAPHTTP" value="management" />
                 <replace
-                  file="${project.build.directory}/generated-sources/axistools/wsdl2java/org/fcrepo/server/access/undeploy.wsdd"
+                  file="${project.build.directory}/generated-sources/axistools/org/fcrepo/server/access/undeploy.wsdd"
                   token="Fedora-API-A-Port-SOAPHTTP" value="access" />
               </tasks>
             </configuration>
