--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,7 @@
     <derby.version>10.7.1.1</derby.version>
     <jersey.version>1.0.3.1</jersey.version>
     <spring.version>3.0.5.RELEASE</spring.version>
+	<cxf.version>2.4.0</cxf.version>
   </properties>
 
   <dependencyManagement>
@@ -449,6 +450,22 @@
         <artifactId>xmlunit</artifactId>
         <version>1.3</version>
         <scope>test</scope>
+      </dependency>
+	  <dependency>
+        <groupId>org.apache.cxf</groupId>
+        <artifactId>cxf-rt-frontend-jaxws</artifactId>
+        <version>${cxf.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.cxf</groupId>
+        <artifactId>cxf-rt-transports-http</artifactId>
+        <version>${cxf.version}</version>
+      </dependency>
+      <!-- Jetty is needed if you're using the CXFServlet -->
+      <dependency>
+        <groupId>org.apache.cxf</groupId>
+        <artifactId>cxf-rt-transports-http-jetty</artifactId>
+        <version>${cxf.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
