--- a/fcrepo-server/pom.xml
+++ b/fcrepo-server/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+  <modelVersion>4.0.0</modelVersion>
 
   <parent>
     <groupId>org.fcrepo</groupId>
@@ -31,6 +31,7 @@
     <fedora.hostname>localhost</fedora.hostname>
     <fedora.port>8080</fedora.port>
     <fedora.appServerContext>fedora</fedora.appServerContext>
+    <cxf.version>2.4.0</cxf.version>
   </properties>
 
   <build>
@@ -122,7 +123,7 @@
               <classpathScope>runtime</classpathScope>
             </configuration>
           </execution>
-          
+
           <execution>
             <id>gen-vocab</id>
             <phase>process-classes</phase>
@@ -628,6 +629,28 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-beans</artifactId>
+    </dependency>
+    <!-- TODO: resolve <dependency> <groupId>org.apache.cxf</groupId> <artifactId>cxf-rt-frontend-jaxws</artifactId> 
+      <version>${cxf.version}</version> </dependency> <dependency> <groupId>org.apache.cxf</groupId> 
+      <artifactId>cxf-rt-transports-http</artifactId> <version>${cxf.version}</version> 
+      </dependency> <dependency> <groupId>org.apache.cxf</groupId> <artifactId>cxf-rt-transports-http-jetty</artifactId> 
+      <version>${cxf.version}</version> </dependency> -->
+    <dependency>
+      <groupId>org.apache.cxf</groupId>
+      <artifactId>cxf-bundle</artifactId>
+      <version>${cxf.version}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>commons-logging</groupId>
+          <artifactId>commons-logging</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+
+    <dependency>
+      <groupId>com.sun.xml.ws</groupId>
+      <artifactId>jaxws-rt</artifactId>
+      <version>2.1.4</version>
     </dependency>
 
     <!-- Note: No demonstrated evidence of use. DWD 9/15/2009 -->
