--- a/pom.xml
+++ b/pom.xml
@@ -120,7 +120,7 @@
     <instrumentedTests>**/*Test*__*.class</instrumentedTests>
     <nestedClassTests>**/*Test*$*.class</nestedClassTests>
     <integration.test.skip>false</integration.test.skip>
-    <maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss 'UTC'Z</maven.build.timestamp.format>                                                                     
+    <maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss 'UTC'Z</maven.build.timestamp.format>
     <timestamp>${maven.build.timestamp}</timestamp>
     <abdera.version>1.1.2</abdera.version>
     <activemq.version>5.5.0</activemq.version>
@@ -128,7 +128,7 @@
     <derby.version>10.7.1.1</derby.version>
     <jersey.version>1.0.3.1</jersey.version>
     <spring.version>3.0.5.RELEASE</spring.version>
-	<cxf.version>2.4.0</cxf.version>
+    <cxf.version>2.4.0</cxf.version>
   </properties>
 
   <dependencyManagement>
@@ -266,7 +266,6 @@
       <version>2.2.1</version>
     </dependency>
 
-      
       <dependency>
         <groupId>jotm</groupId>
         <artifactId>jotm</artifactId>
@@ -347,6 +346,10 @@
           <exclusion>
             <groupId>commons-logging</groupId>
             <artifactId>commons-logging</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>wsdl4j</groupId>
+            <artifactId>wsdl4j</artifactId>
           </exclusion>
         </exclusions>
       </dependency>
@@ -451,7 +454,7 @@
         <version>1.3</version>
         <scope>test</scope>
       </dependency>
-	  <dependency>
+      <dependency>
         <groupId>org.apache.cxf</groupId>
         <artifactId>cxf-rt-frontend-jaxws</artifactId>
         <version>${cxf.version}</version>
@@ -517,9 +520,44 @@
     </repository>
 
     <repository>
-      <id>maven.glassfish.org</id>
-      <name>GlassFish Nexus Server</name>
-      <url>http://maven.glassfish.org/content/groups/glassfish</url>
+      <id>maven2-repository.dev.java.net</id>
+      <name>Java.net Repository for Maven</name>
+      <url>http://download.java.net/maven/2/</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
+
+    <repository>
+      <id>apache-snapshots</id>
+      <name>Apache Release Repository</name>
+      <url>https://repository.apache.org/content/groups/public/</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
+
+    <repository>
+      <id>apache-incubating</id>
+      <name>Apache Incubating Repository</name>
+      <url>http://people.apache.org/repo/m2-incubating-repository/</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
+
+    <repository>
+      <id>jboss</id>
+      <url>https://repository.jboss.org/nexus/content/groups/public/</url>
       <releases>
         <enabled>true</enabled>
       </releases>
