--- a/fcrepo-common/pom.xml
+++ b/fcrepo-common/pom.xml
@@ -1,39 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+  <modelVersion>4.0.0</modelVersion>
 
-	<parent>
-		<groupId>org.fcrepo</groupId>
-		<artifactId>fcrepo</artifactId>
-		<version>3.6-SNAPSHOT</version>
-	</parent>
+  <parent>
+    <groupId>org.fcrepo</groupId>
+    <artifactId>fcrepo</artifactId>
+    <version>3.6-SNAPSHOT</version>
+  </parent>
 
-	<artifactId>fcrepo-common</artifactId>
-	<packaging>jar</packaging>
-	<name>Fedora Common Library</name>
+  <artifactId>fcrepo-common</artifactId>
+  <packaging>jar</packaging>
+  <name>Fedora Common Library</name>
 
-	<build>
-	    <plugins>
+  <build>
+    <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-antrun-plugin</artifactId>
         <version>1.7</version>
         <executions>
           <execution>
-	            <id>generate-sources</id>
-	            <phase>generate-sources</phase>
+            <id>generate-sources</id>
+            <phase>generate-sources</phase>
             <configuration>
               <target>
-                <property name="compile_classpath" refid="maven.compile.classpath"/>
-                <property name="runtime_classpath" refid="maven.runtime.classpath"/>
-                <property name="test_classpath" refid="maven.test.classpath"/>
-                <property name="plugin_classpath" refid="maven.plugin.classpath"/>
+                <property name="compile_classpath" refid="maven.compile.classpath" />
+                <property name="runtime_classpath" refid="maven.runtime.classpath" />
+                <property name="test_classpath" refid="maven.test.classpath" />
+                <property name="plugin_classpath" refid="maven.plugin.classpath" />
 
-                <echo message="compile classpath: ${compile_classpath}"/>
-                <echo message="runtime classpath: ${runtime_classpath}"/>
-                <echo message="test classpath:    ${test_classpath}"/>
-                <echo message="plugin classpath:  ${plugin_classpath}"/>
+                <echo message="compile classpath: ${compile_classpath}" />
+                <echo message="runtime classpath: ${runtime_classpath}" />
+                <echo message="test classpath:    ${test_classpath}" />
+                <echo message="plugin classpath:  ${plugin_classpath}" />
               </target>
             </configuration>
             <goals>
@@ -43,158 +43,177 @@
         </executions>
       </plugin>
       <plugin>
-       <groupId>org.apache.maven.plugins</groupId>
-       <artifactId>maven-jar-plugin</artifactId>
-       <executions>
-         <execution>
-           <goals>
-             <goal>test-jar</goal>
-           </goals>
-         </execution>
-       </executions>
-     </plugin>
-      	      <!-- Need to remove this plugin when ANT builds no longer supported -->
-	      <plugin>
-	        <groupId>org.apache.maven.plugins</groupId>
-	        <artifactId>maven-surefire-plugin</artifactId>
-	        <configuration>
-	          <includes>
-	            <include>**/*Test*</include>
-	          </includes>
-	        </configuration>
-	      </plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <executions>
+          <execution>
+            <goals>
+              <goal>test-jar</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <!-- Need to remove this plugin when ANT builds no longer supported -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <includes>
+            <include>**/*Test*</include>
+          </includes>
+        </configuration>
+      </plugin>
 
-	      <plugin>
-	        <groupId>org.apache.cxf</groupId>
-	        <artifactId>cxf-codegen-plugin</artifactId>
-	        <version>${cxf.version}</version>
-	        <executions>
-	          <execution>
-	            <id>generate-sources</id>
-	            <phase>generate-sources</phase>
-	            <configuration>
-	              <sourceRoot>
-	                ${project.build.directory}/generated-sources/cxf
-	              </sourceRoot>
-	              <useCompileClasspath>true</useCompileClasspath>
-	              <wsdlOptions>
-	                <!-- API-M -->
-	                <wsdlOption>
-	                  <wsdl>${basedir}/../resources/wsdl/Fedora-API-M.wsdl</wsdl>
-	                  <bindingFiles>
-	                    <bindingFile>${basedir}/../resources/wsdl/bindings/JAX-WS-API-M-Bindings.xml</bindingFile>
-	                    <bindingFile>${basedir}/../resources/wsdl/bindings/JAX-B-Bindings.xml</bindingFile>
-	                  </bindingFiles>
-	                </wsdlOption>
-	                <!-- API-M MTOM -->
-	                <wsdlOption>
-	                  <wsdl>${basedir}/../resources/wsdl/Fedora-API-M-MTOM.wsdl</wsdl>
-	                  <bindingFiles>
-	                    <bindingFile>${basedir}/../resources/wsdl/bindings/JAX-WS-API-M-BindingsMTOM.xml</bindingFile>
-	                    <bindingFile>${basedir}/../resources/wsdl/bindings/JAX-B-Bindings.xml</bindingFile>
-	                    <bindingFile>${basedir}/../resources/wsdl/bindings/JAX-B-BindingsMTOM.xml</bindingFile>
-	                  </bindingFiles>
-	                </wsdlOption>
-	                <!-- API-A -->
-	                <wsdlOption>
-	                  <wsdl>${basedir}/../resources/wsdl/Fedora-API-A.wsdl</wsdl>
-	                  <bindingFiles>
-	                    <bindingFile>${basedir}/../resources/wsdl/bindings/JAX-WS-API-A-Bindings.xml</bindingFile>
-	                    <bindingFile>${basedir}/../resources/wsdl/bindings/JAX-B-Bindings.xml</bindingFile>
-	                  </bindingFiles>
-	                </wsdlOption>
-	                <!-- API-A MTOM -->
-	                <wsdlOption>
-	                  <wsdl>${basedir}/../resources/wsdl/Fedora-API-A-MTOM.wsdl</wsdl>
-	                  <bindingFiles>
-	                    <bindingFile>${basedir}/../resources/wsdl/bindings/JAX-WS-API-A-BindingsMTOM.xml</bindingFile>
-	                    <bindingFile>${basedir}/../resources/wsdl/bindings/JAX-B-Bindings.xml</bindingFile>
-	                    <bindingFile>${basedir}/../resources/wsdl/bindings/JAX-B-BindingsMTOM.xml</bindingFile>
-	                  </bindingFiles>
-	                </wsdlOption>
+      <plugin>
+        <groupId>org.apache.cxf</groupId>
+        <artifactId>cxf-codegen-plugin</artifactId>
+        <version>${cxf.version}</version>
+        <executions>
+          <execution>
+            <id>generate-sources</id>
+            <phase>generate-sources</phase>
+            <configuration>
+              <sourceRoot>
+                ${project.build.directory}/generated-sources/cxf
+              </sourceRoot>
+              <useCompileClasspath>true</useCompileClasspath>
+              <wsdlOptions>
+                <!-- API-M -->
+                <wsdlOption>
+                  <wsdl>${basedir}/../resources/wsdl/Fedora-API-M.wsdl</wsdl>
+                  <bindingFiles>
+                    <bindingFile>${basedir}/../resources/wsdl/bindings/JAX-WS-API-M-Bindings.xml</bindingFile>
+                    <bindingFile>${basedir}/../resources/wsdl/bindings/JAX-B-Bindings.xml</bindingFile>
+                  </bindingFiles>
+                </wsdlOption>
+                <!-- API-M MTOM -->
+                <wsdlOption>
+                  <wsdl>${basedir}/../resources/wsdl/Fedora-API-M-MTOM.wsdl</wsdl>
+                  <bindingFiles>
+                    <bindingFile>${basedir}/../resources/wsdl/bindings/JAX-WS-API-M-BindingsMTOM.xml</bindingFile>
+                    <bindingFile>${basedir}/../resources/wsdl/bindings/JAX-B-Bindings.xml</bindingFile>
+                    <bindingFile>${basedir}/../resources/wsdl/bindings/JAX-B-BindingsMTOM.xml</bindingFile>
+                  </bindingFiles>
+                </wsdlOption>
+                <!-- API-A -->
+                <wsdlOption>
+                  <wsdl>${basedir}/../resources/wsdl/Fedora-API-A.wsdl</wsdl>
+                  <bindingFiles>
+                    <bindingFile>${basedir}/../resources/wsdl/bindings/JAX-WS-API-A-Bindings.xml</bindingFile>
+                    <bindingFile>${basedir}/../resources/wsdl/bindings/JAX-B-Bindings.xml</bindingFile>
+                  </bindingFiles>
+                </wsdlOption>
+                <!-- API-A MTOM -->
+                <wsdlOption>
+                  <wsdl>${basedir}/../resources/wsdl/Fedora-API-A-MTOM.wsdl</wsdl>
+                  <bindingFiles>
+                    <bindingFile>${basedir}/../resources/wsdl/bindings/JAX-WS-API-A-BindingsMTOM.xml</bindingFile>
+                    <bindingFile>${basedir}/../resources/wsdl/bindings/JAX-B-Bindings.xml</bindingFile>
+                    <bindingFile>${basedir}/../resources/wsdl/bindings/JAX-B-BindingsMTOM.xml</bindingFile>
+                  </bindingFiles>
+                </wsdlOption>
 
-	              </wsdlOptions>
-	            </configuration>
-	            <goals>
-	              <goal>wsdl2java</goal>
-	            </goals>
-	          </execution>
-	        </executions>
-	      </plugin>
+              </wsdlOptions>
+            </configuration>
+            <goals>
+              <goal>wsdl2java</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
 
-	    </plugins>
-		  </build>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>build-helper-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>add-cxf-source</id>
+            <phase>generate-sources</phase>
+            <goals>
+              <goal>add-source</goal>
+            </goals>
+            <configuration>
+              <sources>
+                <source>${basedir}/target/generated-sources/cxf</source>
+              </sources>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
 
-	<dependencies>
+    </plugins>
+  </build>
+
+  <dependencies>
 
 
-	    <dependency>
-	      <groupId>commons-codec</groupId>
-	      <artifactId>commons-codec</artifactId>
-	    </dependency>
+    <dependency>
+      <groupId>commons-codec</groupId>
+      <artifactId>commons-codec</artifactId>
+    </dependency>
 
-	    <dependency>
-	      <groupId>commons-httpclient</groupId>
-	      <artifactId>commons-httpclient</artifactId>
-	    </dependency>
+    <dependency>
+      <groupId>commons-httpclient</groupId>
+      <artifactId>commons-httpclient</artifactId>
+    </dependency>
 
-	    <dependency>
-	      <groupId>javax.xml</groupId>
-	      <artifactId>jaxrpc-api</artifactId>
-	      <version>1.1</version>
-	    </dependency>
+    <dependency>
+      <groupId>javax.xml</groupId>
+      <artifactId>jaxrpc-api</artifactId>
+      <version>1.1</version>
+    </dependency>
 
-	    <dependency>
-	      <groupId>org.fcrepo</groupId>
-	      <artifactId>mulgara-core</artifactId>
-	    </dependency>
+    <dependency>
+      <groupId>org.fcrepo</groupId>
+      <artifactId>mulgara-core</artifactId>
+    </dependency>
 
-	    <dependency>
-	      <groupId>org.fcrepo</groupId>
-	      <artifactId>sunxacml</artifactId>
-	      <classifier>melcoe</classifier>
-	    </dependency>
+    <dependency>
+      <groupId>org.fcrepo</groupId>
+      <artifactId>sunxacml</artifactId>
+      <classifier>melcoe</classifier>
+    </dependency>
 
-	    <dependency>
-	      <groupId>wsdl4j</groupId>
-	      <artifactId>wsdl4j</artifactId>
-	      <version>1.6.2</version>
-	    </dependency>
+    <dependency>
+      <groupId>wsdl4j</groupId>
+      <artifactId>wsdl4j</artifactId>
+      <version>1.6.2</version>
+    </dependency>
 
-	    <dependency>
-	      <groupId>org.slf4j</groupId>
-	      <artifactId>slf4j-api</artifactId>
-	    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+    </dependency>
 
-	    <dependency>
-	      <groupId>org.slf4j</groupId>
-	      <artifactId>log4j-over-slf4j</artifactId>
-	    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>log4j-over-slf4j</artifactId>
+    </dependency>
 
-	    <dependency>
-	      <groupId>org.slf4j</groupId>
-	      <artifactId>jcl-over-slf4j</artifactId>
-	    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>jcl-over-slf4j</artifactId>
+    </dependency>
 
-	    <dependency>
-	      <groupId>dom4j</groupId>
-	      <artifactId>dom4j</artifactId>
-	      <version>1.6.1</version>
-	    </dependency>
+    <dependency>
+      <groupId>dom4j</groupId>
+      <artifactId>dom4j</artifactId>
+      <version>1.6.1</version>
+    </dependency>
 
-	    <dependency>
-	      <groupId>org.fcrepo</groupId>
-	      <artifactId>saxon</artifactId>
-	      <version>9.0</version>
-	      <scope>import</scope>
-	    </dependency>
+    <dependency>
+      <groupId>org.fcrepo</groupId>
+      <artifactId>saxon</artifactId>
+      <version>9.0</version>
+      <scope>import</scope>
+    </dependency>
 
-	    <dependency>
-	      <groupId>javax.servlet</groupId>
-	      <artifactId>servlet-api</artifactId>
-	      <scope>provided</scope>
-	    </dependency>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>servlet-api</artifactId>
+      <scope>provided</scope>
+    </dependency>
 
-	</dependencies>
+  </dependencies>
 
 </project>
