--- a/fcrepo-common/pom.xml
+++ b/fcrepo-common/pom.xml
@@ -237,6 +237,10 @@
     	<groupId>commons-pool</groupId>
     	<artifactId>commons-pool</artifactId>
     </dependency>
+    <dependency>
+    	<groupId>commons-io</groupId>
+    	<artifactId>commons-io</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
