--- a/pom.xml
+++ b/pom.xml
@@ -147,6 +147,12 @@
         <artifactId>commons-dbcp</artifactId>
         <version>1.4</version>
       </dependency>
+      
+      <dependency>
+        <groupId>commons-io</groupId>
+        <artifactId>commons-io</artifactId>
+        <version>2.4</version>
+      </dependency>
 
 	  <dependency>
 	    <groupId>org.apache.httpcomponents</groupId>
