--- a/fcrepo-integrationtest/fcrepo-integrationtest-configC/pom.xml
+++ b/fcrepo-integrationtest/fcrepo-integrationtest-configC/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.fcrepo</groupId>
     <artifactId>fcrepo-integrationtest</artifactId>
-    <version>3.7.0-SNAPSHOT</version>
+    <version>3.7.0</version>
   </parent>
 
   <artifactId>fcrepo-integrationtest-configC</artifactId>
