--- a/pom.xml
+++ b/pom.xml
@@ -122,7 +122,7 @@
     <jersey.version>1.8</jersey.version>
     <slf4j.version>1.7.2</slf4j.version>
     <spring.version>3.0.7.RELEASE</spring.version>
-    <trippi.version>1.5.9-SNAPSHOT</trippi.version>
+    <trippi.version>1.5.9</trippi.version>
     <powermock.version>1.5.1</powermock.version>
     <httpcomponents.version>4.2.5</httpcomponents.version>
     <httpcore.version>4.2.4</httpcore.version>
