--- a/fcrepo-server/pom.xml
+++ b/fcrepo-server/pom.xml
@@ -376,6 +376,12 @@
       <groupId>dom4j</groupId>
       <artifactId>dom4j</artifactId>
       <version>1.6.1</version>
+      <exclusions>
+        <exclusion>
+          <groupId>xml-apis</groupId>
+          <artifactId>xml-apis</artifactId>
+        </exclusion>
+    </exclusions>
     </dependency>
 
     <dependency>
@@ -484,6 +490,10 @@
           <artifactId>maven-findbugs-plugin</artifactId>
           <groupId>maven-plugins</groupId>
         </exclusion>
+        <exclusion>
+          <artifactId>xml-apis</artifactId>
+          <groupId>xml-apis</groupId>
+        </exclusion>
       </exclusions>
     </dependency>
 
@@ -532,6 +542,8 @@
     <dependency>
       <groupId>org.apache.cxf</groupId>
       <artifactId>cxf-rt-frontend-jaxws</artifactId>
+      <exclusions>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.apache.cxf</groupId>
@@ -574,6 +586,12 @@
     <dependency>
       <groupId>org.apache.ws.commons.axiom</groupId>
       <artifactId>axiom-impl</artifactId>
+      <exclusions>
+      	<exclusion>
+      		<artifactId>woodstox-core-asl</artifactId>
+      		<groupId>org.codehaus.woodstox</groupId>
+      	</exclusion>
+      </exclusions>
     </dependency>
 
     <dependency>
