--- a/pom.xml
+++ b/pom.xml
@@ -117,7 +117,7 @@
     <activemq.version>5.7.0</activemq.version>
     <akubra.version>0.4.0</akubra.version>
     <axiom.version>1.2.14</axiom.version>
-    <cxf.version>2.7.3</cxf.version>
+    <cxf.version>2.7.7</cxf.version>
     <derby.version>10.9.1.0</derby.version>
     <jersey.version>1.8</jersey.version>
     <slf4j.version>1.7.2</slf4j.version>
@@ -238,6 +238,10 @@
             <groupId>commons-logging</groupId>
             <artifactId>commons-logging</artifactId>
           </exclusion>
+          <exclusion>
+            <groupId>jaxen</groupId>
+            <artifactId>jaxen</artifactId>
+          </exclusion>
         </exclusions>
       </dependency>
       <dependency>
@@ -325,6 +329,12 @@
         </exclusions>
       </dependency>
       <dependency>
+        <groupId>org.codehaus.woodstox</groupId>
+        <artifactId>woodstox-core-asl</artifactId>
+        <version>4.2.0</version>
+        <scope>compile</scope>
+      </dependency>
+      <dependency>
         <groupId>org.fcrepo</groupId>
         <artifactId>mulgara-core</artifactId>
         <version>2.1.12</version>
@@ -377,6 +387,10 @@
           <exclusion>
             <groupId>commons-logging</groupId>
             <artifactId>commons-logging</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>xml-apis</groupId>
+            <artifactId>xml-apis</artifactId>
           </exclusion>
         </exclusions>
       </dependency>
