--- a/fcrepo-integrationtest/fcrepo-integrationtest-configA/pom.xml
+++ b/fcrepo-integrationtest/fcrepo-integrationtest-configA/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.fcrepo</groupId>
     <artifactId>fcrepo-integrationtest</artifactId>
-    <version>3.7.1-SNAPSHOT</version>
+    <version>3.7.1</version>
   </parent>
 
   <artifactId>fcrepo-integrationtest-configA</artifactId>
